# paszi_lab4

./: README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202501010000_create_users.py
backend/app/: main.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/users/: models.py  routes.py  schemas.py  security.py
backend/tests/: conftest.py  test_register.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  RegisterPage.tsx
