[tool.poetry]
name = "mvp-auth-backend"
version = "0.1.0"
description = ""
authors = ["team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = ">=2.0,<3.0"
alembic = "^1.13.0"
psycopg = { version = "^3.2.0", extras = ["binary"] }
pydantic = ">=2.7,<3"
pydantic-settings = ">=2.2,<3"
argon2-cffi = ">=23.1.0"
passlib = ">=1.7.4"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore:'crypt' is deprecated and slated for removal in Python 3.13:DeprecationWarning:passlib\\.utils",
  "ignore:Accessing argon2.__version__:DeprecationWarning:passlib\\.handlers\\.argon2"
]
